--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
 .wrapper { width: 960px; margin: 0 auto; }
-#main { margin: 40px 0; }
 .wk-col-50 { width: 50%; float: left;}
-#sidebar { width: 200px; float: left; margin-right: 40px; }
-	#sidebar .col-prod, #sidebar .col-year { float: left; width: 100px; }
-		#sidebar a.selected { color: red; }
-#sidebar-main { width: 720px; float: left; }
 
 li { list-style: none; }
+
+#main { position: relative; margin: 40px 0; border: 1px solid #999; }
+  #sidebar { width: 200px; float: left; position: absolute; z-index: 10; font-size: 0.8em; background: rgba(0,0,0,0.1);
+      padding: 10px; }
+    #sidebar .js-toggle { display: none; }
+    #sidebar .js-toggleSidebar { display: block; }
+    #sidebar .col-prod, #sidebar .col-year { float: left; width: 100px; }
+      #sidebar a.selected { color: red; }
+    #sidebar ul { margin: 0; }
+    #sidebar h4 { font-size: 1.5em; }
+  #graph-note { position: absolute; top: 0;left: 0; padding: 20px 40px; display: none;
+    background: rgba(0,0,0,0.1); text-align: center; }
+  #graph { background: #F5FAFF; }
