--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 li { list-style: none; }
 
-#main { position: relative; margin: 40px 0; border: 1px solid #999; }
+#maingraph { position: relative; margin: 40px 0; border: 1px solid #999; }
   #sidebar { width: 200px; float: left; position: absolute; z-index: 10; font-size: 0.8em; background: rgba(0,0,0,0.1);
       padding: 10px; }
     #sidebar .js-toggle { display: none; }
